--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,15 +10,27 @@ services:
       - db
     volumes:
       - .:/app
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    command: bash -c "bundle exec rails db:create && bundle exec rails db:migrate && bundle exec rails server -b 0.0.0.0"
 
   # PostgreSQL service
   db:
     image: postgres:latest
     environment:
-      POSTGRES_USER: myapp_user
-      POSTGRES_PASSWORD: myapp_password
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+      - "9300:9300"
 
 volumes:
   pgdata:
